traq-ing/overlays/local/domain-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traq-ing
spec:
  routes:
    - kind: Rule
      match: Host(`traq-ing.cp20.local`)
