traq-ing/overlays/local/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traq-ing-ingress

spec:
  routes:
    - kind: Rule
      match: Host(`traq-ing.cp20.local`)
      services:
        - kind: Service
          namespace: traq-ing
          name: traq-ing-client
          port: 80
          scheme: http
          strategy: RoundRobin
          weight: 1
